# ediwrite

./: .gitignore  CMakeLists.txt  CloseManager.cpp  CloseManager.h  EdiException.h  MainWindow.cpp  MainWindow.h  README.md  UntitleCounter.cpp  UntitleCounter.h  Win.cpp  Win.h  codeeditor.cpp  codeeditor.h  main.cpp  raise.cpp  specification.md  todo.md
